finish linking and staticfiles

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,5 +1,6 @@
 {% extends 'jobs/base.html' %}
 {% block content %}
+{% load static %}
 
   <main role="main">
 
@@ -10,6 +11,7 @@
         <p>
           <a href="mailto:huchida0622@gmail.com" class="btn btn-primary my-2">Email</a>
         </p>
+        <img src="{% static 'Hiroki.jpg' %}" height="300" alt="Hiroki">
       </div>
     </section>
 
