--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,20 +1,32 @@
 {% extends 'jobs/base.html' %}
 {% block content %}
 
-  <main role="main">
-    <div class="container">
-      <h1>Welcome to My blog</h1>
-      <br>
-      <br>
-      <h2>Latest Post</h2>
-
-
-
-      
-      <hr>
+  <div class="jumbotron p-4 p-md-5 rounded ">
+    <div class="col-md-6 px-0">
+      <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+      <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
     </div>
+  </div>
 
+  {% for blog in blogs.all %}
 
-  </main>
+  <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <h3 class="mb-0">{{ blog.title }}</h3>
+          <div class="mb-1 text-muted">{{ blog.pub_date|date:"m/d" }}</div>
+          <p class="card-text mb-auto">{{ blog.summary }}</p>
+          <a href="{% url 'detail' blog.id %}" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  {% endfor %}
 
 {% endblock %}
