--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
@@ -44,7 +45,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'home' %}">Hiroki Uchida</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -54,7 +55,7 @@
           <a class="nav-item nav-link" href="https://twitter.com/Hir0kii_">Twitter</a>
           <a class="nav-item nav-link" href="https://www.linkedin.com/in/hir0kiuchida">LinkedIn</a>
           <a class="nav-item nav-link" href="https://github.com/Hir0kii">GitHub</a>
-          <a class="nav-item nav-link" href="#">Resume</a>
+          <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
 
         </div>
