--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Hiroki Uchida</title>
+  <title>Hiroki's Portfolio</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- css -->
-  <link rel="stylesheet" href="{% static 'css/master.css' %}">
-  <link rel="stylesheet" href="{% static 'css/profile_resume.css' %}">
+  <link rel="stylesheet" href="{% static 'jobs/css/master.css' %}">
+  <link rel="stylesheet" href="{% static 'jobs/css/profile_resume.css' %}">
 
   <!-- google font -->
   <link href='//fonts.googleapis.com/css?family=Roboto:200,400,600' rel='stylesheet' type='text/css'>
@@ -25,9 +25,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="https://www.linkedin.com/in/hir0kiuchida">LinkedIn</a>
-          <a class="nav-item nav-link" href="https://github.com/Hir0kii">GitHub</a>
-          <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
+          <a class="nav-item nav-link" href="https://www.linkedin.com/in/hir0kiuchida"><img src="{% static 'jobs/logos/linkedin.png' %}" height=25 alt="linkedin"></a>
+          <a class="nav-item nav-link" href="https://github.com/Hir0kii"><img src="{% static 'jobs/logos/github.png' %}" height=25 alt="github"></a>
+          <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Full Resume</a>
         </div>
       </div>
     </nav>
