--- a/jobs/templates/jobs/profile.html
+++ b/jobs/templates/jobs/profile.html
@@ -1,7 +1,8 @@
-
-<p><span class="profile">Profile</span></p>
-<p/>生年月日: 92/6/22 27歳
-<p/>資格: 一級建築士、TOEIC 880点
-<p><span class="profile">Contact</span></p>
-<p/>TEL: 080-1500-2937
-<p>MAIL: <a href="mailto:huchida0622@gmail.com">huchida0622@gmail.com</a></p>
+<h1>Profile</h1>
+<h3>内田 裕貴</h3>
+<p class="lead text-muted">
+  前職は住宅メーカーで現場監督として３年のキャリアを積んできております。
+建設業界の将来性とスピード感を考え、今後はテクノロジーを活用する人材へキャリアを変えようと思い、Pythonを勉強しております。AIで建設業界をも変えられたらと思います。
+アメリカに10年住んでおりましたので、英語へも対応できるかと思います。
+よろしくお願いします。
+</p>
