--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -1,39 +1,97 @@
-{% load static %}
 
-<div class="history-tl-container">
-  <ul class="tl">
+<style>
 
-    <li class="tl-item" ng-repeat="item in retailer_history">
-      <div class="timestamp">
-        2019/10 -
+  * {
+    color: #3D405B;
+    margin: 0;
+    padding: 0;
+  }
+
+  ul {
+    width: 500px;
+    height: auto;
+    margin: 20px auto;
+    padding: 10px;
+    position: absolute;
+    list-style-type: none;
+  }
+
+  ul li {
+    padding-bottom: 20px;
+  }
+
+  ul::before {
+    content: "";
+    position: absolute;
+    width: 3px;
+    background: #F2CC8F;
+    height: 95%;
+    left: 0;
+    top: 0;
+  }
+
+  ul li div {
+    padding: 20px;
+    padding-bottom: 10px;
+    margin-left: 30px;
+    position: relative;
+    background-color: #F2CC8F;
+    box-shadow: 0 15px 15px -10px #F2CC8F;
+  }
+
+  ul li div::before {
+    content: "";
+    position: absolute;
+    left: -30px;
+    top: 15px;
+    border-top: 15px solid transparent;
+    border-right: 15px solid #F2CC8F;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid transparent;
+  }
+
+  ul li::before {
+    position: absolute;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: #81B29A;
+    left: -8px;
+    border-radius: 50%;
+    margin-top: 20px;
+  }
+</style>
+
+<h2>Experience</h2>
+<div class="timeline">
+  <ul>
+    <li>
+      <div>
+        <h4>2019/11 - </h4>
+        <h5>Start Python</h5>
+        <p>Python</p>
       </div>
-      <div class="item-title">Start Python</div>
-      <div class="item-detail">Don't forget the ring</div>
     </li>
-
-    <li class="tl-item" ng-repeat="item in retailer_history">
-      <div class="timestamp">
-        2016 - 2019
+    <li>
+      <div>
+        <h4>2016 - 2019</h4>
+        <h5>株式会社一条工務店</h5>
+        <p>工事課</p>
       </div>
-      <div class="item-title">一条工務店</div>
-      <div class="item-detail">Don't enter the caves!!</div>
     </li>
-
-    <li class="tl-item" ng-repeat="item in retailer_history">
-      <div class="timestamp">
-        2012 - 2016
+    <li>
+      <div>
+        <h4>2012 - 2016</h4>
+        <h5>法政大学</h5>
+        <p>デザイン工学部　建築学科</p>
       </div>
-      <div class="item-title">法政大学</div>
-      <div class="item-detail">Also, throw that Gollum too</div>
     </li>
-
-    <li class="tl-item" ng-repeat="item in retailer_history">
-      <div class="timestamp">
-        2008 - 2011
+    <li>
+      <div>
+        <h4>2008 - 2011</h4>
+        <h5>大阪府立豊中高等学校</h5>
+        <p></p>
       </div>
-      <div class="item-title">大阪府立豊中高等学校</div>
-      <div class="item-detail">Also, throw that Gollum too</div>
     </li>
 
   </ul>
-</div>
