--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -12,7 +12,7 @@
     height: auto;
     margin: 20px auto;
     padding: 10px;
-    position: absolute;
+    position: relative;
     list-style-type: none;
   }
 
