--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -46,20 +46,21 @@
 </section>
 
 <section class="project">
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row">
-
         {% for job in jobs.all %}
+        <hr class="featurette-divider">
 
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="{{ job.image.url }}" width="100%" height="225" alt="No Image" />
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
+            <div class="row featurette">
+              <div class="col-md-7">
+                <h2 class="featurette-heading">{{ job.title }}<span class="text-muted">It’ll blow your mind.</span></h2>
+                <p class="lead">
+                  {{ job.summary }}
+                </p>
+              </div>
+              <div class="col-md-3">
+                <img class="rounded" src="{{ job.image.url }}" height="300" alt="project image">
+              </div>
             </div>
-          </div>
-        </div>
+
 
         {% endfor %}
 
@@ -67,5 +68,11 @@
     </div>
   </div>
 </section>
+
+
+
+
+
+
 
 {% endblock %}
