--- a/jobs/templates/jobs/profile.html
+++ b/jobs/templates/jobs/profile.html
@@ -1,4 +1,4 @@
-<h1>Profile</h1>
+<h1><strong class="under_line">Profile</strong></h1>
 <h3>内田 裕貴</h3>
 <p class="lead text-muted">
   前職は住宅メーカーで現場監督として３年のキャリアを積んできております。
