--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -8,7 +8,7 @@
   }
 
   ul {
-    width: 500px;
+    width: 1000px;
     height: auto;
     margin: 20px auto;
     padding: 10px;
@@ -24,7 +24,7 @@
     content: "";
     position: absolute;
     width: 3px;
-    background: #F2CC8F;
+    background: #F4F1DE;
     height: 95%;
     left: 0;
     top: 0;
@@ -35,8 +35,8 @@
     padding-bottom: 10px;
     margin-left: 30px;
     position: relative;
-    background-color: #F2CC8F;
-    box-shadow: 0 15px 15px -10px #F2CC8F;
+    background-color: #F4F1DE;
+    box-shadow: 0 15px 15px -10px #F4F1DE;
   }
 
   ul li div::before {
@@ -45,7 +45,7 @@
     left: -30px;
     top: 15px;
     border-top: 15px solid transparent;
-    border-right: 15px solid #F2CC8F;
+    border-right: 15px solid #F4F1DE;
     border-bottom: 15px solid transparent;
     border-left: 15px solid transparent;
   }
@@ -62,14 +62,14 @@
   }
 </style>
 
-<h2>Experience</h2>
+<h1><strong class="under_line">Experience</strong></h1>
 <div class="timeline">
   <ul>
     <li>
       <div>
         <h4>2019/11 - </h4>
         <h5>Start Python</h5>
-        <p>Python</p>
+        <p>UdemyやYouTubeでPython,Django,を勉強。</p>
       </div>
     </li>
     <li>
@@ -83,7 +83,7 @@
       <div>
         <h4>2012 - 2016</h4>
         <h5>法政大学</h5>
-        <p>デザイン工学部　建築学科</p>
+        <p>デザイン工学部建築学科</p>
       </div>
     </li>
     <li>
