--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -69,14 +69,14 @@
       <div>
         <h4>2019/11 - </h4>
         <h5>Start Python</h5>
-        <p>UdemyやYouTubeでPython,Django,を勉強。</p>
+        <p>UdemyやYouTubeでPython,Django,を独学。Numpy,Pandas,sckit-learnを学びKaggleへも挑戦。</p>
       </div>
     </li>
     <li>
       <div>
         <h4>2016 - 2019</h4>
         <h5>株式会社一条工務店</h5>
-        <p>工事課</p>
+        <p>東京で注文住宅の施工管理者として勤務。</p>
       </div>
     </li>
     <li>
