--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -53,8 +53,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2><a class="featurette-heading" href="#">{{ job.title }}</a></h2>
-        <p class="lead">{{ job.summary }}</p>
+        <h2><a class="featurette-heading" href="{{ job.url }}">{{ job.title }}</a></h2>
+        <p class="lead ml-4">{{ job.summary|linebreaksbr }}</p>
       </div>
       <div class="col-md-3">
         <img class="rounded" src="{{ job.image.url }}" height="300" alt="project image">
