--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -57,7 +57,7 @@
         <p class="lead ml-4">{{ job.summary|linebreaksbr }}</p>
       </div>
       <div class="col-md-3">
-        <img class="rounded" src="{{ job.image.url }}" height="300" alt="project image">
+        <a href="{{ job.url }}"> <img class="rounded" src="{{ job.image.url }}" height="300" alt="project image"></a>
       </div>
     </div>
 
