--- a/jobs/templates/jobs/profile.html
+++ b/jobs/templates/jobs/profile.html
@@ -2,7 +2,7 @@
 <h3>内田 裕貴</h3>
 <p class="lead text-muted">
   前職は住宅メーカーで現場監督として３年のキャリアを積んできております。
-建設業界の将来性とスピード感を考え、今後はテクノロジーを活用する人材へキャリアを変えようと思い、Pythonを勉強しております。AIで建設業界をも変えられたらと思います。
+建設業界の将来性とスピード感を考え、今後はテクノロジーを活用する人材へキャリアを変えようと思い、Pythonを勉強しております。
 アメリカに10年住んでおりましたので、英語へも対応できるかと思います。
 よろしくお願いします。
 </p>
