--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -69,7 +69,7 @@
       <div>
         <h4>2019/11 - </h4>
         <h5>Start Python</h5>
-        <p>UdemyやYouTubeでPython,Django,を独学。Numpy,Pandas,sckit-learnを学びKaggleへも挑戦。</p>
+        <p>UdemyやYouTubeでPythonを独学</p>
       </div>
     </li>
     <li>
