--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -26,7 +26,7 @@
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="https://www.linkedin.com/in/hir0kiuchida"><img src="{% static 'jobs/logos/linkedin.png' %}" height=25 alt="linkedin"></a>
           <a class="nav-item nav-link" href="https://github.com/Hir0kii"><img src="{% static 'jobs/logos/github.png' %}" height=25 alt="github"></a>
-          <a class="nav-item nav-link" href="{% static 'jobs/images/resume.pdf' %}">Full Resume</a>
+          <a class="nav-item nav-link" href="{% static 'jobs/images/resumes.pdf' %}">Full Resume</a>
         </div>
       </div>
     </nav>
