--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -69,7 +69,9 @@
       <div>
         <h4>2019/11 - </h4>
         <h5>Start Python</h5>
-        <p>UdemyやYouTubeでPythonを独学</p>
+        <p>UdemyやYouTubeでPythonを独学<a href="https://www.udemy.com/user/hiroki-118/">(受講済 Udemy Courses)</a><br>
+          - Numpy, Pandas, Sckit-learn, Matplotlib, Seaborn, Django<br>
+          Kaggleに挑戦</p>
       </div>
     </li>
     <li>
