--- a/jobs/templates/jobs/profile.html
+++ b/jobs/templates/jobs/profile.html
@@ -4,5 +4,5 @@
   前職は住宅メーカーで現場監督として３年のキャリアを積んできております。
 建設業界の将来性とスピード感を考え、今後はテクノロジーを活用する人材へキャリアを変えようと思い、Pythonを勉強しております。
 アメリカに10年住んでおりましたので、英語へも対応できるかと思います。
-よろしくお願いします。
+よろしくお願い致します。
 </p>
