--- a/jobs/templates/jobs/resume.html
+++ b/jobs/templates/jobs/resume.html
@@ -68,10 +68,12 @@
     <li>
       <div>
         <h4>2019/11 - </h4>
-        <h5>Start Python</h5>
-        <p>UdemyやYouTubeでPythonを独学<a href="https://www.udemy.com/user/hiroki-118/">(受講済 Udemy Courses)</a><br>
-          - Numpy, Pandas, Sckit-learn, Matplotlib, Seaborn, Django<br>
-          Kaggleに挑戦</p>
+        <h5>Start Programming</h5>
+        <p>UdemyやYouTubeで独学<a href="https://www.udemy.com/user/hiroki-118/">(受講済 Udemy Courses)</a><br>
+          Python: Django, Numpy, Pandas, Sckit-learn, Matplotlib, Seaborn<br>
+          JavaScript: Vue.js<br>
+          Other: HTML, CSS<br>
+          DB: PostgreSQL
       </div>
     </li>
     <li>
